remove default role
